[gd_scene load_steps=18 format=1]

[ext_resource path="res://white.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://sheet.png" type="Texture" id=3]
[ext_resource path="res://player.tres" type="Animation" id=4]
[ext_resource path="res://chest.gd" type="Script" id=5]
[ext_resource path="res://dog.png" type="Texture" id=6]
[ext_resource path="res://yeah.png" type="Texture" id=7]
[ext_resource path="res://dday.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1172.04, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 38.6783, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 85.6208 )

[sub_resource type="Animation" id=4]

resource/name = "idle"
length = 1.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 3 ] }

[sub_resource type="Animation" id=5]

resource/name = "open"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 0.9, 1.2 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 6, 7, 6, 7, 8 ] }

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=7]

resource/name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }

[sub_resource type="Animation" id=8]

resource/name = "open"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 1, 2 ] }

[sub_resource type="Animation" id=9]

resource/name = "x"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }

[node name="game" type="Node"]

[node name="bounds" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.06738, 322.409, 290.636 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 14.2403, -73.1025, 140.775 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 1, 0, 0, 14.2403, 734.152, 144.094 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounds"]

transform/pos = Vector2( 322.409, 290.636 )
transform/scale = Vector2( 1, 1.06738 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="bounds"]

transform/pos = Vector2( -73.1025, 140.775 )
transform/scale = Vector2( 1, 14.2403 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D3" type="CollisionShape2D" parent="bounds"]

transform/pos = Vector2( 734.152, 144.094 )
transform/scale = Vector2( 1, 14.2403 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 319.956, 172.31 )
transform/scale = Vector2( 10.9986, 6.3847 )
z/z = -4
texture = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="player" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 106.316, 180.655 )
transform/scale = Vector2( 0.592654, 0.592654 )
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 3.61, 0, 0, 1, -14.141, 28.0442 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )
__meta__ = { "_edit_group_":true }

[node name="Sprite" type="Sprite" parent="player"]

transform/pos = Vector2( -3.64022, 33.554 )
transform/scale = Vector2( 0.626696, 0.626696 )
texture = ExtResource( 3 )
hframes = 9
frame = 4

[node name="anim" type="AnimationPlayer" parent="player/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 4 )
anims/open = SubResource( 5 )
anims/walk = ExtResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]

transform/pos = Vector2( -14.141, 28.0442 )
transform/scale = Vector2( 3.61, 1 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="chest" type="Area2D" parent="."]

transform/pos = Vector2( 431.446, 201.206 )
transform/scale = Vector2( 0.578552, 0.578552 )
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 7.25471, 0, 0, 5.93567, 3.53101, 54.9889 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 5 )
__meta__ = { "_edit_group_":true }

[node name="Sprite" type="Sprite" parent="chest"]

texture = ExtResource( 3 )
hframes = 9
frame = 2

[node name="anim" type="AnimationPlayer" parent="chest/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 7 )
anims/open = SubResource( 8 )
anims/x = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]

transform/pos = Vector2( 3.53101, 54.9889 )
transform/scale = Vector2( 7.25471, 5.93567 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.2
one_shot = false
autostart = false

[node name="part" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 455.81, 235.894 )
transform/rot = -149.722
transform/scale = Vector2( 2.55045, 2.3748 )
config/amount = 32
config/lifetime = 2.0
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.929688, 0.657318, 0.657318, 1 )

[node name="part2" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 98.42, 241.31 )
transform/rot = 149.7
transform/scale = Vector2( 2.55045, 2.3748 )
config/amount = 32
config/lifetime = 2.0
params/direction = 0.0
params/spread = 90.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.658997, 0.877295, 0.953125, 1 )

[node name="part3" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 298.775, 398.345 )
transform/rot = 180.0
transform/scale = Vector2( 0.2, 0.2 )
z/z = -2
config/amount = 6
config/lifetime = 12.0
config/texture = ExtResource( 6 )
params/direction = 0.0
params/spread = 40.0
params/linear_velocity = 200.0
params/spin_velocity = 0.4
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 0.3
randomness/initial_angle = 0.8

[node name="part4" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 317.209, 146.677 )
transform/scale = Vector2( 0.682649, 0.682649 )
z/z = -1
texture = ExtResource( 7 )

[node name="SamplePlayer2D" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = true
stream/loop = true
stream/volume_db = -9.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


